fixing collapsable menu

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
 
-    <title>Document</title>
+    <title>Fresh coffee</title>
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
                     </a>
                     <div class="navbar-brand">
                         <a href="index.html"><h1>Fresh coffee for every day</h1></a>
-                        <p><span>Сертефикат качества</span></p>
+                        <p><span>Quality certificate</span></p>
                     </div>
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
@@ -34,19 +34,19 @@
                     <ul id="nav-list" class="nav navbar-nav navbar-right">
                         <li>
                             <a href="menu-categories.html">
-                                <span class="glyphicon glyphicon-cutlery" style="font-size:30px"></span><br class='hidden-xs'>Menu</a>
+                                <span class="glyphicon glyphicon-cutlery"></span><br class='hidden-xs'>Menu</a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="glyphicon glyphicon-info-sign" style="font-size:30px"></span><br class='hidden-xs'>About</a>
+                                <span class="glyphicon glyphicon-info-sign"></span><br class='hidden-xs'>About</a>
                         </li>
                         <li>
                             <a href="#">
-                                <span class="glyphicon glyphicon-certificate" style="font-size:30px"></span><br class='hidden-xs'>Awards</a>
+                                <span class="glyphicon glyphicon-certificate"></span><br class='hidden-xs'>Awards</a>
                         </li>
                         <li id="phone" class="hidden-xs">
                             <a href="tel:063-600-0004">
-                                <span>063-600-0004</span></a><div>* We Deliver</div>
+                                <span class="tel">063-600-0004</span></a><div>* We Deliver</div>
                         </li>
 
                     </ul>
@@ -55,5 +55,9 @@
         </nav>
     </header>
     
+
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+   <script src="js/bootstrap.min.js"></script>
+   <script src="js/script.js"></script>
 </body>
 </html>
