add jumbotron, phone icon

--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
                 <div id="collapsable-nav" class="collapse navbar-collapse">
                     <ul id="nav-list" class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="menu-categories.html">
-                                <span class="glyphicon glyphicon-cutlery"></span><br class='hidden-xs'>Menu</a>
-                        </li>
-                        <li>
                             <a href="#">
                                 <span class="glyphicon glyphicon-info-sign"></span><br class='hidden-xs'>About</a>
                         </li>
                         <li>
-                            <a href="#">
-                                <span class="glyphicon glyphicon-certificate"></span><br class='hidden-xs'>Awards</a>
+                            <a href="menu-categories.html">
+                                <span class="glyphicon glyphicon-cutlery"></span><br class='hidden-xs'>Menu</a>
                         </li>
-                        <li id="phone" class="hidden-xs">
-                            <a href="tel:063-600-0004">
-                                <span class="tel">063-600-0004</span></a><div>* We Deliver</div>
+                        <li>
+                                <a href="#">
+                                    <span class="glyphicon glyphicon-user"></span><br class='hidden-xs'>Sigh up</a>
+                        </li>
+                        <li>
+                            <a href="tel:063-600-0004" class="tel"><span class="glyphicon glyphicon-earphone icon"></span><br class='hidden-xs'>
+                                063-600-0004</a>
                         </li>
 
                     </ul>
@@ -54,10 +54,16 @@
             </div>
         </nav>
     </header>
+
+    <div id="main-content" class="container">
+        <div class="jumbotron">
+           
+        </div>
+    </div>
     
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-   <script src="js/bootstrap.min.js"></script>
-   <script src="js/script.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
