--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/images/mug-hot-solid.svg">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
 
     <title>Fresh coffee</title>
 </head>
+
 <body>
     <header>
         <nav id="header-nav" class="navbar navbar-default">
-            <div class="container">
+            <div class="container header-container">
                 <div class="navbar-header">
                     <a href="index.html" class="pull-left visible-md visible-lg">
                         <div id="logo-img" alt="Logo image"></div>
                     </a>
                     <div class="navbar-brand">
-                        <a href="index.html"><h1>Fresh coffee for every day</h1></a>
+                        <a href="index.html">
+                            <h1>Fresh coffee for every day</h1>
+                        </a>
                         <p><span>Quality certificate</span></p>
                     </div>
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                        data-target="#collapsable-nav" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -41,11 +47,12 @@
                                 <span class="glyphicon glyphicon-cutlery"></span><br class='hidden-xs'>Menu</a>
                         </li>
                         <li>
-                                <a href="#">
-                                    <span class="glyphicon glyphicon-user"></span><br class='hidden-xs'>Sigh up</a>
+                            <a href="sign_up.html">
+                                <span class="glyphicon glyphicon-user"></span><br class='hidden-xs'>Sigh up</a>
                         </li>
                         <li>
-                            <a href="tel:063-600-0004" class="tel"><span class="glyphicon glyphicon-earphone icon"></span><br class='hidden-xs'>
+                            <a href="tel:063-600-0004" class="tel"><span
+                                    class="glyphicon glyphicon-earphone icon"></span><br class='hidden-xs'>
                                 063-600-0004</a>
                         </li>
 
@@ -57,13 +64,59 @@
 
     <div id="main-content" class="container">
         <div class="jumbotron">
-           
+        </div>
+            <div id="home-tiles" class="row">
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <a href="menu-category.html">
+                        <div id="menu-tile"><span>menu</span></div>
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <a href="single-category.html">
+                        <div id="specials-tile"><span>specials</span></div>
+                    </a>
+                </div>
+                <div class="col-md-4 col-sm-12 col-xs-12">
+                    <a href="https://goo.gl/maps/dnEe1Qgfss59gfat7" target="_blank">
+                        <div id="map-tile">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3596.438454765394!2d30.517237493170207!3d50.40260721051814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1652005991447!5m2!1sru!2sua"
+                                width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <span>find us</span>
+                        </div>
+                    </a>
+                </div>
         </div>
     </div>
     
+    <footer class="panel-footer">
+        <div class="container">
+            <div class="row">
+                <section id="hours" class="col-sm-4">
+                    <span>Hours:</span><br>
+                    Mon-Fri: 10:00 - 22.00<br>
+                    Sat-Sun: 11.00- 23.00<br>
+                    <hr class="visible-xs">
+                </section>
+                <section id="address" class="col-sm-4">
+                    <span>Address:</span><br>
+                    Kyiv, Holosiivske av., 15<br>
+                    tel. 063-600-0004<br>
+                    <hr class="visible-xs">
+                </section>
+                <section id="all_rights" class="col-sm-4">
+                    <span>&#169; All rights reserved</span><br>
+                    <hr class="visible-xs">
+                </section>
+            </div>
+        </div>
+    </footer>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
 </body>
+
 </html>
