img source correction

--- a/menu.html
+++ b/menu.html
@@ -71,7 +71,7 @@
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
                     <div class="category-tile">
-                        <img class="single-category-cup" src="/images/americano_2.jpg" alt="" width="200" height="200">
+                        <img class="single-category-cup" src="images/americano_2.jpg" alt="" width="200" height="200">
                         <span>Americano</span>
                     </div>
                 </a>
@@ -79,7 +79,7 @@
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
                     <div class="category-tile">
-                        <img class="single-category-cup" src="/images/espresso.jpg" alt="" width="200" height="200">
+                        <img class="single-category-cup" src="images/espresso.jpg" alt="" width="200" height="200">
                         <span>espresso</span>
                     </div>
                 </a>
@@ -87,7 +87,7 @@
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
                     <div class="category-tile">
-                        <img class="single-category-cup" src="/images/latte_2.jpg" alt="" width="200" height="200">
+                        <img class="single-category-cup" src="images/latte_2.jpg" alt="" width="200" height="200">
                         <span>latte</span>
                     </div>
                 </a>
@@ -95,7 +95,7 @@
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
                     <div class="category-tile">
-                        <img class="single-category-cup" src="/images/latte.png" alt="" width="200" height="200">
+                        <img class="single-category-cup" src="images/latte.png" alt="" width="200" height="200">
                         <span>cappuccino</span>
                     </div>
                 </a>
@@ -103,7 +103,7 @@
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
                     <div class="category-tile">
-                        <img class="single-category-cup" src="/images/irish_coffee.jpg" alt="" width="200" height="200">
+                        <img class="single-category-cup" src="images/irish_coffee.jpg" alt="" width="200" height="200">
                         <span>irish coffee</span>
                     </div>
                 </a>
@@ -111,7 +111,7 @@
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
                     <div class="category-tile">
-                        <img class="single-category-cup" src="/images/mocha.jpeg" alt="" width="200" height="200">
+                        <img class="single-category-cup" src="images/mocha.jpeg" alt="" width="200" height="200">
                         <span>mocha</span>
                     </div>
                 </a>
@@ -119,7 +119,7 @@
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
                     <div class="category-tile">
-                        <img class="single-category-cup" src="/images/frappe.jpg" alt="" width="200" height="200">
+                        <img class="single-category-cup" src="images/frappe.jpg" alt="" width="200" height="200">
                         <span>frappe</span>
                     </div>
                 </a>
@@ -127,7 +127,7 @@
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
                     <div class="category-tile">
-                        <img class="single-category-cup" src="/images/iced_coffee.jpg" alt="" width="200" height="200">
+                        <img class="single-category-cup" src="images/iced_coffee.jpg" alt="" width="200" height="200">
                         <span>iced coffe</span>
                     </div>
                 </a>
