--- a/menu.html
+++ b/menu.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/images/mug-hot-solid.svg">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
 
@@ -65,12 +66,12 @@
     </header>
 
     <div id="main-content" class="container">
-        <h2 id="menu-categories-title" class="text-center">Menu categories</h2>
+        <h2 id="menu-categories-title" class="text-center wow zoomIn">Menu categories</h2>
 
         <section class="row">
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
-                    <div class="category-tile">
+                    <div class="category-tile wow zoomIn" data-wow-delay="0.3s">
                         <img class="single-category-cup" src="./images/americano_2.jpg" alt="" width="200" height="200">
                         <span>Americano</span>
                     </div>
@@ -78,7 +79,7 @@
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
-                    <div class="category-tile">
+                    <div class="category-tile wow zoomIn"data-wow-delay="0.4s">
                         <img class="single-category-cup" src="./images/espresso.jpg" alt="" width="200" height="200">
                         <span>espresso</span>
                     </div>
@@ -86,7 +87,7 @@
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
-                    <div class="category-tile">
+                    <div class="category-tile wow zoomIn" data-wow-delay="0.5s">
                         <img class="single-category-cup" src="./images/latte_2.jpg" alt="" width="200" height="200">
                         <span>latte</span>
                     </div>
@@ -94,7 +95,7 @@
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
-                    <div class="category-tile">
+                    <div class="category-tile wow zoomIn" data-wow-delay="0.6s">
                         <img class="single-category-cup" src="./images/latte.png" alt="" width="200" height="200">
                         <span>cappuccino</span>
                     </div>
@@ -102,7 +103,7 @@
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
-                    <div class="category-tile">
+                    <div class="category-tile wow zoomIn" data-wow-delay="0.7s">
                         <img class="single-category-cup" src="./images/irish_coffee.jpg" alt="" width="200" height="200">
                         <span>irish coffee</span>
                     </div>
@@ -110,7 +111,7 @@
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
-                    <div class="category-tile">
+                    <div class="category-tile wow zoomIn" data-wow-delay="0.8s">
                         <img class="single-category-cup" src="./images/mocha.jpeg" alt="" width="200" height="200">
                         <span>mocha</span>
                     </div>
@@ -118,7 +119,7 @@
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
-                    <div class="category-tile">
+                    <div class="category-tile wow zoomIn" data-wow-delay="0.9s">
                         <img class="single-category-cup" src="./images/frappe.jpg" alt="" width="200" height="200">
                         <span>frappe</span>
                     </div>
@@ -126,7 +127,7 @@
             </div>
             <div class="col-md-3 col-sm-4 col-xs-6 col-xxs categories-tile-margin">
                 <a href="single-category.html">
-                    <div class="category-tile">
+                    <div class="category-tile wow zoomIn" data-wow-delay="1s">
                         <img class="single-category-cup" src="./images/iced_coffee.jpg" alt="" width="200" height="200">
                         <span>iced coffe</span>
                     </div>
@@ -164,7 +165,11 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
