--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
                     </button>
                 </div>
 
@@ -55,7 +56,6 @@
                                     class="glyphicon glyphicon-earphone icon"></span><br class='hidden-xs'>
                                 063-600-0004</a>
                         </li>
-
                     </ul>
                 </div>
             </div>
