--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="/images/mug-hot-solid.svg">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
 
@@ -44,7 +45,7 @@
                                 <span class="glyphicon glyphicon-info-sign"></span><br class='hidden-xs'>About</a>
                         </li>
                         <li>
-                            <a href="menu.html">
+                            <a href="#" class="nav_menu">
                                 <span class="glyphicon glyphicon-cutlery"></span><br class='hidden-xs'>Menu</a>
                         </li>
                         <li>
@@ -62,33 +63,7 @@
         </nav>
     </header>
 
-    <div id="main-content" class="container">
-        <div class="jumbotron">
-        </div>
-            <div id="home-tiles" class="row">
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                    <a href="menu.html">
-                        <div id="menu-tile"><span>menu</span></div>
-                    </a>
-                </div>
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                    <a href="specials.html">
-                        <div id="specials-tile"><span>specials</span></div>
-                    </a>
-                </div>
-                <div class="col-md-4 col-sm-12 col-xs-12">
-                    <a href="https://goo.gl/maps/dnEe1Qgfss59gfat7" target="_blank">
-                        <div id="map-tile">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3596.438454765394!2d30.517237493170207!3d50.40260721051814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sua!4v1652005991447!5m2!1sru!2sua"
-                                width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade"></iframe>
-                            <span>find us</span>
-                        </div>
-                    </a>
-                </div>
-        </div>
-    </div>
+    <div id="main-content" class="container nav_menu"></div>
     
     <footer class="panel-footer">
         <div class="container">
@@ -113,10 +88,13 @@
         </div>
     </footer>
 
-
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
